--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_reviews = None\n",
+    "total_reviews = map(sum, )\n",
     "total_reviews # 3420"
    ]
   },
