--- a/index.ipynb
+++ b/index.ipynb
@@ -193,11 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<map at 0x7fa9b03f7470>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "total_reviews = map(sum, )\n",
+    "total_reviews = map(sum, review_counts)\n",
     "total_reviews # 3420"
    ]
   },
