--- a/index.ipynb
+++ b/index.ipynb
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "total_reviews = list(map(lambda sum(review_counts), review_counts)\n",
+    "total_reviews = list(map(sum(review_counts), review_counts)\n",
     "total_reviews # 3420"
    ]
   },
