--- a/index.ipynb
+++ b/index.ipynb
@@ -193,20 +193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-17-43d19f6c49af>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-18-e2bbee856c42>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-43d19f6c49af>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    total_reviews = list(map(lambda sum(review_counts), review_counts)\u001b[0m\n\u001b[0m                                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-e2bbee856c42>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    total_reviews # 3420\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "total_reviews = list(map(sum(review_counts), review_counts)\n",
+    "total_reviews = list(map(sum, review_counts)\n",
     "total_reviews # 3420"
    ]
   },
