--- a/index.ipynb
+++ b/index.ipynb
@@ -193,21 +193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-18-e2bbee856c42>, line 2)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-20-a64282283793>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-e2bbee856c42>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    total_reviews # 3420\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-a64282283793>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #total_reviews # 3420\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
    "source": [
     "total_reviews = list(map(sum, review_counts)\n",
-    "total_reviews # 3420"
+    "#total_reviews # 3420"
    ]
   },
   {
