--- a/index.ipynb
+++ b/index.ipynb
@@ -206,8 +206,8 @@
     }
    ],
    "source": [
-    "total_reviews = list(map(sum, review_counts)\n",
-    "#total_reviews # 3420"
+    "total_reviews = sum(review_co)\n",
+    "total_reviews # 3420"
    ]
   },
   {
