--- a/index.ipynb
+++ b/index.ipynb
@@ -193,20 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-23-a64282283793>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-a64282283793>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #total_reviews # 3420\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
+     "data": {
+      "text/plain": [
+       "3420"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_reviews = sum(review_co)\n",
+    "total_reviews = sum(review_counts)\n",
     "total_reviews # 3420"
    ]
   },
