Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,12 +262,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def map_format_restaurants(restaurants):\n",
-    "    return list(map(format_restaurant, resaurants))"
+    "    return list(map(format_restaurant, restaurants))"
    ]
   },
   {
