--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return filter(lambda restaurant: rest is_closed)"
+    "    return filter(lambda restaurant: restaurant['is_closed'] )"
    ]
   },
   {
