--- a/index.ipynb
+++ b/index.ipynb
@@ -356,19 +356,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    return filter(lambda restaurant: restaurant['is_closed'] )"
+    "    return lisfilter(lambda restaurant: restaurant['is_closed'], restaurants )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<filter at 0x7fa9b03f7cf8>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "open_restaurants(restaurants)\n",
     "\n",
