--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    list()"
+    "    list(filter(lambda restaurant: restaurant[]))"
    ]
   },
   {
