Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -431,17 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    list(filter(lambda restaurant: restaurant['price'], restaurants))"
+    "    list(filter(lambda restaurant: restaurant['price'] <= 1, restaurants))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
